--- a/adoration-application/modules/adoration-engine/build.gradle
+++ b/adoration-application/modules/adoration-engine/build.gradle
@@ -1,12 +1,14 @@
 ext.componentDescription = "Adoration Support Tool"
 
-apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'application'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 buildscript {
-    repositories { jcenter() }
+    repositories {
+        maven { url "https://plugins.gradle.org/m2/" }
+    }
     dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:5.0.0'
+        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
     }
 }
 
@@ -27,10 +29,12 @@ dependencies {
     compile project(':adoration-application:adoration-webapp')
 }
 
-jar {
-    manifest.attributes( 'provider': 'gradle')
-    manifest.attributes( 'Main-Class': 'website.magyar.adoration.engine.AdorationApplication')
-    manifest.attributes( 'Implementation-Title': "$componentDescription - V$version")
+tasks.named('jar') {
+    manifest {
+        attributes('Main-Class': 'website.magyar.adoration.engine.AdorationApplication')
+        attributes('Implementation-Title': "$componentDescription - ${rootProject.version}")
+        attributes('Version': "${rootProject.version}")
+    }
 }
 
 shadowJar {
@@ -49,8 +53,6 @@ shadowJar {
             '*.xcf',
             'build.properties',
             'about.html']
-
-        archiveName = "adoration-$adorationVersion.$buildNumber"+'.jar'
 }
 
 jar.finalizedBy shadowJar
