add version information to web page

--- a/adoration-application/modules/adoration-engine/build.gradle
+++ b/adoration-application/modules/adoration-engine/build.gradle
@@ -33,7 +33,7 @@ tasks.named('jar') {
     manifest {
         attributes('Main-Class': 'website.magyar.adoration.engine.AdorationApplication')
         attributes('Implementation-Title': "$componentDescription - ${rootProject.version}")
-        attributes('Version': "${rootProject.version}")
+        attributes('AdorationApplication-Version': "${rootProject.version}")
     }
 }
 
