--- a/adoration-application/modules/adoration-webapp/build.gradle
+++ b/adoration-application/modules/adoration-webapp/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.google.apis:google-api-services-oauth2:v1-rev155-1.25.0'
     compile 'org.springframework.social:spring-social-facebook:2.0.3.RELEASE'
     compile 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation group: 'com.jcabi', name: 'jcabi-manifests', version: '1.1'
     //excel manipulation
     compile 'org.apache.poi:poi:4.1.2'
     compile 'org.apache.poi:poi-ooxml:4.1.2'
