--- a/adoration-application/build.gradle
+++ b/adoration-application/build.gradle
@@ -29,29 +29,25 @@ task copyToRelease(type: Copy) {
 }
 
 task release(type: Zip) {
-    dependsOn copyToRelease
+    dependsOn(copyToRelease)
     from rootProject.rootDir.absolutePath + '/release'
 }
 
 subprojects {
-
     repositories {
         maven { url "https://repository.jboss.org/nexus/content/groups/public" }
     }
     dependencies {
-        compile(group: 'org.springframework', name: 'spring-context', version:'5.0.16.RELEASE') {
+        implementation (group: 'org.springframework', name: 'spring-context', version:'5.0.16.RELEASE') {
             exclude(module: 'commons-logging')
         }
-	    compile group: 'org.springframework', name: 'spring-webmvc', version:'5.0.16.RELEASE'
-	    compile group: 'org.aspectj', name: 'aspectjrt', version:'1.6.9'
-        compile group: 'org.postgresql', name: 'postgresql', version:'42.2.12.jre7'
-        testCompile group: 'org.mockito', name: 'mockito-core', version:'3.3.3'
-        testCompile group: 'org.mockito', name: 'mockito-inline', version:'3.3.3'
-        testCompile group: 'junit', name: 'junit', version: '4.13.1'
-        testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
-        testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
+        implementation group: 'org.springframework', name: 'spring-webmvc', version:'5.0.16.RELEASE'
+        implementation group: 'org.aspectj', name: 'aspectjrt', version:'1.6.9'
+        implementation group: 'org.postgresql', name: 'postgresql', version:'42.2.12.jre7'
+        testImplementation group: 'org.mockito', name: 'mockito-core', version:'3.3.3'
+        testImplementation group: 'org.mockito', name: 'mockito-inline', version:'3.3.3'
+        testImplementation group: 'junit', name: 'junit', version: '4.13.1'
+        testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
+        testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
     }
-    
 }
-
-
