--- a/adoration-application/modules/adoration-core/build.gradle
+++ b/adoration-application/modules/adoration-core/build.gradle
@@ -1,8 +1,8 @@
 description = 'Adoration Properties'
 
 dependencies {
-    compile group: 'org.springframework', name: 'spring-jms', version: '5.0.16.RELEASE'
-    compile group: 'org.apache.xbean', name: 'xbean-spring', version: '4.1'
-    compile(group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.0')
-    compile "javax.mail:mail:1.5.0-b01"
+    implementation group: 'org.springframework', name: 'spring-jms', version: '5.0.16.RELEASE'
+    implementation group: 'org.apache.xbean', name: 'xbean-spring', version: '4.1'
+    implementation (group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.0')
+    implementation "javax.mail:mail:1.5.0-b01"
 }
