--- a/adoration-application/modules/adoration-engine/build.gradle
+++ b/adoration-application/modules/adoration-engine/build.gradle
@@ -5,10 +5,10 @@ apply plugin: 'com.github.johnrengelman.shadow'
 
 buildscript {
     repositories {
-        maven { url "https://plugins.gradle.org/m2/" }
+        gradlePluginPortal()
     }
     dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
+        classpath 'gradle.plugin.com.github.jengelman.gradle.plugins:shadow:7.0.0'
     }
 }
 
@@ -24,9 +24,11 @@ run {
 }
 
 dependencies {
-    compile project(':adoration-application:adoration-database')
-    compile project(':adoration-application:adoration-core')
-    compile project(':adoration-application:adoration-webapp')
+    implementation(group: 'org.slf4j', name: 'jcl-over-slf4j', version:'1.7.0')
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation project(':adoration-application:adoration-database')
+    implementation project(':adoration-application:adoration-core')
+    implementation project(':adoration-application:adoration-webapp')
 }
 
 tasks.named('jar') {
