build for gradle 7.0 is ready

--- a/adoration-application/build.gradle
+++ b/adoration-application/build.gradle
@@ -23,6 +23,7 @@ def releaseCopySpec = project.copySpec {
 }
 
 task copyToRelease(type: Copy) {
+    dependsOn ":adoration-application:adoration-engine:shadowJar"
     into rootProject.rootDir.absolutePath + '/release'
     with releaseCopySpec
     rename "adoration-engine-all.jar", "adoration-" + "${rootProject.version}" + ".jar"
