--- a/adoration-application/build.gradle
+++ b/adoration-application/build.gradle
@@ -39,15 +39,15 @@ subprojects {
         maven { url "https://repository.jboss.org/nexus/content/groups/public" }
     }
     dependencies {
-        implementation (group: 'org.springframework', name: 'spring-context', version:'5.0.16.RELEASE') {
+        implementation (group: 'org.springframework', name: 'spring-context', version:'5.0.20.RELEASE') {
             exclude(module: 'commons-logging')
         }
-        implementation group: 'org.springframework', name: 'spring-webmvc', version:'5.0.16.RELEASE'
-        implementation group: 'org.aspectj', name: 'aspectjrt', version:'1.6.9'
-        implementation group: 'org.postgresql', name: 'postgresql', version:'42.2.12.jre7'
+        implementation group: 'org.springframework', name: 'spring-webmvc', version:'5.0.20.RELEASE'
+        implementation group: 'org.aspectj', name: 'aspectjrt', version:'1.6.12'
+        implementation group: 'org.postgresql', name: 'postgresql', version:'42.2.20'
         testImplementation group: 'org.mockito', name: 'mockito-core', version:'3.3.3'
         testImplementation group: 'org.mockito', name: 'mockito-inline', version:'3.3.3'
-        testImplementation group: 'junit', name: 'junit', version: '4.13.1'
+        testImplementation group: 'junit', name: 'junit', version: '4.13.2'
         testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
         testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
     }
