--- a/adoration-application/modules/adoration-database/build.gradle
+++ b/adoration-application/modules/adoration-database/build.gradle
@@ -2,7 +2,7 @@ description = 'Adoration Database'
 
 dependencies {
     implementation(group: 'org.apache.commons', name: 'commons-text', version: '1.6')
-    implementation(group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.0')
-    implementation(group: 'org.hibernate', name: 'hibernate-core', version: '5.4.2.Final')
+    implementation(group: 'org.slf4j', name: 'jcl-over-slf4j', version: "${orgSfl4jVersion}")
+    implementation(group: 'org.hibernate', name: 'hibernate-core', version: '5.4.32.Final')
     implementation project(':adoration-application:adoration-core')
 }
