--- a/adoration-application/modules/adoration-webapp/build.gradle
+++ b/adoration-application/modules/adoration-webapp/build.gradle
@@ -4,30 +4,32 @@ dependencies {
     implementation group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version:'1.9.10'
     implementation group: 'javax.inject', name: 'javax.inject', version:'1'
     implementation group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
-    implementation group: 'org.json', name: 'json', version: '20200518'
-    implementation group: 'org.eclipse.jetty', name: 'jetty-server', version:'9.4.30.v20200611'
-    implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version:'9.4.30.v20200611'
-    implementation group: 'org.eclipse.jetty', name: 'jetty-webapp', version:'9.4.30.v20200611'
-    implementation group: 'org.eclipse.jetty', name: 'jetty-servlets', version:'9.4.30.v20200611'
-    implementation group: 'org.eclipse.jetty', name: 'apache-jsp', version:'9.4.30.v20200611'
+    implementation "$orgJsonApi"
+    implementation group: 'org.eclipse.jetty', name: 'jetty-server', version: "${jettyVersion}"
+    implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version: "${jettyVersion}"
+    implementation group: 'org.eclipse.jetty', name: 'jetty-webapp', version: "${jettyVersion}"
+    implementation group: 'org.eclipse.jetty', name: 'jetty-servlets', version: "${jettyVersion}"
+    implementation group: 'org.eclipse.jetty', name: 'apache-jsp', version: "${jettyVersion}"
     implementation group: 'ch.qos.logback', name: 'logback-classic', version:'1.0.13'
     implementation group: 'org.codehaus.janino', name: 'janino', version:'2.6.1'
-    implementation(group: 'org.slf4j', name: 'jcl-over-slf4j', version:'1.7.0')
+    implementation(group: 'org.slf4j', name: 'jcl-over-slf4j', version: "${orgSfl4jVersion}")
     implementation project(':adoration-application:adoration-core')
     implementation project(':adoration-application:adoration-database')
     implementation group: 'org.apache.commons', name: 'commons-compress', version:'1.18'
     implementation group: 'org.apache.commons', name: 'commons-io', version:'1.3.2'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version:'3.1'
     implementation(group: 'javax.servlet', name: 'jstl', version:'1.2')
-    implementation(group: 'org.springframework.security', name: 'spring-security-core', version:'5.0.16.RELEASE')
-    implementation(group: 'org.springframework.security', name: 'spring-security-web', version:'5.0.16.RELEASE')
-    implementation(group: 'org.springframework.security', name: 'spring-security-config', version:'5.0.16.RELEASE')
-    implementation(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version:'2.3.6.RELEASE')
-    implementation(group: 'org.springframework.security', name: 'spring-security-oauth2-client', version:'5.0.16.RELEASE')
+    implementation(group: 'org.springframework.security', name: 'spring-security-core', version: "${springFrameworkVersion}")
+    implementation(group: 'org.springframework.security', name: 'spring-security-web', version: "${springFrameworkVersion}")
+    implementation(group: 'org.springframework.security', name: 'spring-security-config', version: "${springFrameworkVersion}")
+    implementation(group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: "${springFrameworkVersion}")
     implementation(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.9.4')
-    implementation 'com.google.apis:google-api-services-oauth2:v1-rev155-1.25.0'
+    implementation(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version:'2.5.1.RELEASE')
+//    implementation(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version:'2.3.6.RELEASE')
+    implementation 'com.google.apis:google-api-services-oauth2:v1-rev160-1.25.0'
+//    implementation 'com.google.apis:google-api-services-oauth2:v1-rev155-1.25.0'
     implementation 'org.springframework.social:spring-social-facebook:2.0.3.RELEASE'
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation "$javaxAnnotationApi"
     implementation group: 'com.jcabi', name: 'jcabi-manifests', version: '1.1'
     //excel manipulation
     implementation 'org.apache.poi:poi:4.1.2'
