--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,21 @@ plugins {
     id "org.sonarqube" version "3.2.0"
 }
 
-ext.myBuildNumber='SNAPSHOT'
-if ( hasProperty('buildNumber') ) {
-    myBuildNumber = "${project.ext.buildNumber}"
+if ( !hasProperty('buildNumber') ) {
+    rootProject.ext.buildNumber = 'SNAPSHOT'
 }
-version = "V2.0." + "${project.ext.myBuildNumber}"
+version = "V2.0." + "${rootProject.ext.buildNumber}"
+
+ext {
+    jUnitVersion = '4.13.2'
+    springFrameworkVersion = '5.0.19.RELEASE'
+    springSecurityVersion = '5.0.19.RELEASE'
+    mockitoCoreVersion = '3.3.3'
+    orgSfl4jVersion = '1.7.30'
+    jettyVersion = '9.4.43.v20210629'
+    javaxAnnotationApi='javax.annotation:javax.annotation-api:1.3.2'
+    orgJsonApi='org.json:json:20210307'
+}
 
 sonarqube {
     properties {
