initial internationalization implementation - not ready for use - #2

--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ subprojects {
     }
 
     repositories {
-        maven { url "https://repo.maven.apache.org/maven2" }
+        mavenCentral()
     }
 
     // checkstyle settings
