--- a/adoration-application/modules/adoration-database/build.gradle
+++ b/adoration-application/modules/adoration-database/build.gradle
@@ -4,5 +4,6 @@ dependencies {
     implementation(group: 'org.apache.commons', name: 'commons-text', version: '1.6')
     implementation(group: 'org.slf4j', name: 'jcl-over-slf4j', version: "${orgSfl4jVersion}")
     implementation(group: 'org.hibernate', name: 'hibernate-core', version: '5.4.32.Final')
+    implementation(group: 'org.hibernate', name: 'hibernate-c3p0', version: '5.4.32.Final')
     implementation project(':adoration-application:adoration-core')
 }
