--- a/adoration-application/modules/adoration-engine/adoration.conf.properties
+++ b/adoration-application/modules/adoration-engine/adoration.conf.properties
@@ -28,10 +28,11 @@ email.from = from user
 email.to = to user
 
 #excel file
-excel_file_name = /place/of/little_register.xlsx
-daily_info_file_name = /place/of/daily_info.xlsx
-hourly_info_file_name = /place/of/hourly_info.xlsx
-adorator_info_file_name = /place/of/adorator_info.xlsx
+base_excel_folder = folder_to_excel_files/
+excel_file_name = _little_register.xlsx
+daily_info_file_name = _daily_info.xlsx
+hourly_info_file_name = _hourly_info.xlsx
+adorator_info_file_name = _adorator_info.xlsx
 
 #captcha
 captcha_site_secret = put secret here
