--- a/adoration-application/modules/adoration-webapp/build.gradle
+++ b/adoration-application/modules/adoration-webapp/build.gradle
@@ -25,12 +25,12 @@ dependencies {
     implementation(group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: "${springFrameworkVersion}")
     implementation(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.9.4')
     implementation(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version:'2.5.1.RELEASE')
-    implementation 'com.google.apis:google-api-services-oauth2:v1-rev160-1.25.0'
+    implementation 'com.google.apis:google-api-services-oauth2:v1-rev160-1.25.0' //cannot be upgraded to v2 without code change
     implementation 'org.springframework.social:spring-social-facebook:2.0.3.RELEASE'
     implementation "$javaxAnnotationApi"
     implementation group: 'com.jcabi', name: 'jcabi-manifests', version: '1.1'
     //excel manipulation
-    implementation 'org.apache.poi:poi:4.1.2'
-    implementation 'org.apache.poi:poi-ooxml:4.1.2'
+    implementation 'org.apache.poi:poi:5.2.2'
+    implementation 'org.apache.poi:poi-ooxml:5.2.2'
     testImplementation group: 'org.springframework', name: 'spring-mock', version: '2.0.8'
 }
