--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "org.sonarqube" version "3.2.0"
+    id "org.sonarqube" version "6.3.1.5724"
 }
 
 if ( !hasProperty('buildNumber') ) {
@@ -21,8 +21,8 @@ ext {
 
 sonarqube {
     properties {
-        property "sonar.projectKey", "website-magyar_orokimadas"
-        property "sonar.organization", "website-magyar"
+        property "sonar.projectKey", "tkohegyi_common"
+        property "sonar.organization", "tkohegyi"
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.java.checkstyle.reportPaths", "build/reports/checkstyle/main.xml"
         property "sonar.exclusions", "**/external/**/*";
